fixed dark mode and css colors accordingly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,14 @@
   background-color: #09393f;
 } */
 html.dark-mode {
-  background-color: rgb(26, 17, 17);
+  background-color: #171717;
 }
 body {
   transition: background 250ms ease;
   background-color: var(--bg-color);
+}
+.dark-mode body {
+  color: #c7c7c7 !important;
 }
 .toggle {
   display: flex;
@@ -71,7 +74,6 @@ body {
   height: 100%;
 } */
 
-
 /* ------------------------- */
 /* body {
   font-family: "Open Sans", sans-serif;
@@ -87,10 +89,14 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
 }
-
 
 .back-to-top {
   position: fixed;
@@ -118,7 +124,6 @@ h1, h2, h3, h4, h5, h6 {
   background: #0678e3;
   transition: background 0.2s ease-in-out;
 }
-
 
 #preloader {
   position: fixed;
@@ -164,13 +169,11 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
 @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
 }
-
 
 #header {
   position: fixed;
@@ -197,7 +200,6 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 100px;
   }
 }
-
 
 .nav-menu * {
   margin: 0;
@@ -245,24 +247,29 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu .active > a,
+.nav-menu li:hover > a {
   color: #fff;
   background: #0563bb;
 }
 
-.nav-menu a:hover span, .nav-menu .active > a span, .nav-menu li:hover > a span {
+.nav-menu a:hover span,
+.nav-menu .active > a span,
+.nav-menu li:hover > a span {
   color: #fff;
 }
 
-.nav-menu a:hover, .nav-menu li:hover > a {
+.nav-menu a:hover,
+.nav-menu li:hover > a {
   width: 100%;
   color: #fff;
 }
 
-.nav-menu a:hover span, .nav-menu li:hover > a span {
+.nav-menu a:hover span,
+.nav-menu li:hover > a span {
   display: block;
 }
-
 
 .mobile-nav-toggle {
   position: fixed;
@@ -294,7 +301,6 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-nav-active .mobile-nav-toggle i {
   color: #0563bb;
 }
-
 
 #hero {
   width: 100%;
@@ -372,7 +378,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
 section {
   padding: 60px 0;
   overflow: hidden;
@@ -394,7 +399,7 @@ section {
 }
 
 .section-title h2::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 120px;
@@ -403,9 +408,13 @@ section {
   bottom: 1px;
   left: calc(50% - 60px);
 }
+.dark-mode .section-title h2{
+  color: #fff !important;
+  transition: 0.9s;
+}
 
 .section-title h2::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 40px;
@@ -418,7 +427,6 @@ section {
 .section-title p {
   margin-bottom: 0;
 }
-
 
 .about .content h3 {
   font-weight: 700;
@@ -445,7 +453,6 @@ section {
   margin-bottom: 0;
 }
 
-
 .facts .count-box {
   padding: 30px 30px 25px 30px;
   margin-top: 30px;
@@ -453,6 +460,9 @@ section {
   position: relative;
   text-align: center;
   background: #fff;
+}
+.dark-mode .facts .count-box {
+  border-radius: .75em;
 }
 
 .facts .count-box i {
@@ -481,7 +491,6 @@ section {
   font-size: 14px;
 }
 
-
 .skills .progress {
   height: 50px;
   display: block;
@@ -497,6 +506,9 @@ section {
   font-family: "Poppins", sans-serif;
   color: #45505b;
 }
+.dark-mode .skills .progress .skill {
+  color: #ccc;
+}
 
 .skills .progress .skill .val {
   float: right;
@@ -510,10 +522,9 @@ section {
 .skills .progress-bar {
   width: 1px;
   height: 10px;
-  transition: .9s;
+  transition: 0.9s;
   background-color: #0563bb;
 }
-
 
 .resume .resume-title {
   font-size: 26px;
@@ -521,6 +532,9 @@ section {
   margin-top: 20px;
   margin-bottom: 20px;
   color: #45505b;
+}
+.dark-mode .resume .resume-title {
+  color: #cccccc;
 }
 
 .resume .resume-item {
@@ -540,13 +554,18 @@ section {
   margin-bottom: 10px;
 }
 
-.resume .resume-item h5 {
+.resume-item h5 {
   font-size: 16px;
   background: #f7f8f9;
   padding: 5px 15px;
   display: inline-block;
   font-weight: 600;
   margin-bottom: 10px;
+}
+
+.dark-mode .resume-item h5 {
+  background-color: transparent !important;
+  color: #fff;
 }
 
 .resume .resume-item ul {
@@ -572,7 +591,6 @@ section {
   background: #fff;
   border: 2px solid #0563bb;
 }
-
 
 .portfolio .portfolio-item {
   margin-bottom: 30px;
@@ -601,7 +619,8 @@ section {
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
+.portfolio #portfolio-flters li:hover,
+.portfolio #portfolio-flters li.filter-active {
   color: #0563bb;
 }
 
@@ -645,6 +664,7 @@ section {
   justify-content: center;
   align-items: center;
 }
+
 
 .portfolio .portfolio-wrap .portfolio-info::before {
   display: block;
@@ -727,13 +747,13 @@ section {
   right: 15px;
 }
 
-
 .services .icon-box {
   text-align: center;
   padding: 70px 20px 80px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
   box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+  border-radius: 1em;
 }
 
 .services .icon-box .icon {
@@ -858,7 +878,6 @@ section {
   fill: #11dbcf;
 }
 
-
 .testimonials .section-header {
   margin-bottom: 40px;
 }
@@ -874,6 +893,10 @@ section {
   margin: 0 auto;
 }
 
+.dark-mode .testimonials .testimonial-item h3 {
+  color: #ccc;
+}
+
 .testimonials .testimonial-item h3 {
   font-size: 20px;
   font-weight: bold;
@@ -887,7 +910,8 @@ section {
   margin: 0 0 15px 0;
 }
 
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
   color: #90c8fc;
   font-size: 26px;
 }
@@ -910,7 +934,8 @@ section {
   margin: 0 auto 15px auto;
 }
 
-.testimonials .owl-nav, .testimonials .owl-dots {
+.testimonials .owl-nav,
+.testimonials .owl-dots {
   margin-top: 5px;
   text-align: center;
 }
@@ -934,10 +959,11 @@ section {
   }
 }
 
-
 .contact .info {
   width: 100%;
   background: #fff;
+  padding: 1em;
+  border-radius: 1em;
 }
 
 .contact .info i {
@@ -969,11 +995,14 @@ section {
   color: #728394;
 }
 
-.contact .info .email, .contact .info .phone {
+.contact .info .email,
+.contact .info .phone {
   margin-top: 40px;
 }
 
-.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
+.contact .info .email:hover i,
+.contact .info .address:hover i,
+.contact .info .phone:hover i {
   background: #0563bb;
   color: #fff;
 }
@@ -981,6 +1010,8 @@ section {
 .contact .php-email-form {
   width: 100%;
   background: #fff;
+  padding: 1em;
+  border-radius: 1em;
 }
 
 .contact .php-email-form .form-group {
@@ -1037,7 +1068,8 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input, .contact .php-email-form textarea {
+.contact .php-email-form input,
+.contact .php-email-form textarea {
   border-radius: 4px;
   box-shadow: none;
   font-size: 14px;
@@ -1082,7 +1114,6 @@ section {
   }
 }
 
-
 .portfolio-details {
   padding: 40px 0;
 }
@@ -1093,7 +1124,8 @@ section {
   margin-bottom: 20px;
 }
 
-.portfolio-details .portfolio-details-carousel .owl-nav, .portfolio-details .portfolio-details-carousel .owl-dots {
+.portfolio-details .portfolio-details-carousel .owl-nav,
+.portfolio-details .portfolio-details-carousel .owl-dots {
   margin-top: 5px;
   text-align: center;
 }
@@ -1142,13 +1174,15 @@ section {
   }
 }
 
-
 #footer {
   background: #f7f8f9;
   color: #45505b;
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
+}
+.dark-mode #footer {
+  background-color: #EDEDED;
 }
 
 #footer h3 {
